--- a/pong/index.html
+++ b/pong/index.html
@@ -1289,7 +1289,12 @@
         };
       };
     </script>
-    <script async type="text/javascript" src="index.js"></script>
+    
+        <script type="module">
+          import initModule from "./index.js";
+          initModule(Module);
+        </script>
+        
   </body>
 </html>
 
