Text will render on binary, but not on Web. Issue with font not opening when porting to wasm.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <h2>Controls</h2>
       <p>W: Move up</p>
       <p>S: Move down</p>
-      <p>Both will start game</p>
+      <p>Esc: Pause</p>
+      <p>Move to start/resume game</p>
     </div>
   
   </body>
